--- a/manifest.json
+++ b/manifest.json
@@ -3,8 +3,8 @@
   "short_name": "CheckApp",
   "start_url": "./index.html",
   "display": "standalone",
-  "background_color": "#ffffff",
-  "theme_color": "#ffffff",
+  "background_color": "#f2f4f7",
+  "theme_color": "#00bcd4",
   "orientation": "portrait",
   "icons": [
     {
